Refactor controllers and tests for clarity and consistency
Replaced deprecated Collectors.toList() with List.toList() in ActorMapper. Updated createComment return type in InnovationCommentController and removed an unused overload of resolveInnovationName. Introduced SEARCH_TYPE_GENERAL constant in ProjectInnovationController for consistency. Improved hashCode test assertions in ProjectInnovationResponseDtoTest.